--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,10 +20,9 @@ body {
 }
 
 img {
-  display: block;
-  /* width: 100%; */
-
-  margin-right: 5px;
+  height: 80%;
+  width: 100%;
+  object-fit: cover;
 }
 
 p,
@@ -35,4 +34,50 @@ ul,
 ol {
   padding-left: 0;
   margin: 0;
+}
+
+.search-form {
+  display: flex;
+  padding: 10px;
+  background-color: rgb(39, 113, 209);
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.load-more {
+  display: block;
+  margin: 0 auto;
+}
+
+.gallery {
+  display: grid;
+  max-width: 1140px;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  grid-auto-rows: 250px;
+  grid-gap: 12px;
+  justify-content: center;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.photo-card {
+  position: relative;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-item {
+  text-align: center;
+  font-size: 12px;
+}
+
+.button.is-hidden {
+  display: none;
 }
