--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -63,6 +63,8 @@ ol {
 }
 
 .photo-card {
+  text-decoration: none;
+  color: #212121;
   position: relative;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
